# utils

./: CMakeLists.txt  init_compile_commands.sh
external_include/: -0_debug.h
include/: -0_utils.h
src/: assert.c  bzero.c  memdup.c  nonnull.c
